--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,16 +5,20 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;400&family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap" 
+		rel="stylesheet">
 		<meta name="viewport" content="width=device-width" />
 		<title>Carlos Roa | Portfolio</title>
 	</head>
 	<body class=" bg-blue-950 flex justify-center items-center 
 	w-full min-h-screen
 	">
-		<main class="font-sans font text-white rounded-lg bg-ds-strgray min-w-[360px] overflow-hidden">
+		<main class="font-Nunito text-white rounded-lg bg-ds-strgray min-w-[360px] overflow-hidden shadow-2xl">
 			<div class="banner w-full min-h-[120px] bg-night-banner bg-cover bg-center bg-no-repeat"></div>
-			<div class="p-4 w-full [&>*]:mb-8">
-				<section class="w-full flex items-start justify-between relative">
+			<div class="p-4 w-full ">
+				<section class="w-full flex items-start justify-between relative mb-8">
 					<div class="pic w-[110px] relative ">
 						<img src="/images/profile-pic.jpg" alt="Profile Picture" class="
 						aspect-square rounded-[100%] -translate-y-[50px] border-ds-strgray border-[5px]
@@ -24,17 +28,22 @@
 						</div>
 					</div>
 					
-					<div class="flex gap-2 bg-ds-gray py-1 px-3 rounded-lg [&>img]:w-[25px]">
+					<div class="flex gap-2 bg-ds-gray py-1 px-3 rounded-lg [&>img]:w-[30px]">
 						<img src="/images/Tech_Stack/atom.png" alt="React">
 						<img src="/images/Tech_Stack/java-script.png" alt="Javascript">
 						<img src="/images/Tech_Stack/magento.png" alt="Magento">
 						<img src="/images/Tech_Stack/mongo.png" alt="Magento">
 					</div>
 				</section>
-				<section>
-					<h4 class="text-3xl">Carlos Roa</h4>
-					<h4 class="text-lg opacity-[0.60]">@roacdev</h4>
+				<section class="mb-1">
+					<h2 class="text-3xl font-bold">Carlos Roa</h2>
+					<h3 class="text-lg text-lighttext">@roacdev</h3>
+					<h4 class="font-light flex justify-start items-center"> <img src="/images/old-pc.png" alt="Old PC" class="w-[40px] aspect-square"> Playing <span class="font-bold text-white ml-1">Visual Studio Code</span></h4>
 				</section>
+				<section class="about  font-bold">
+					<h3>ABOUT ME</h3>
+				</section>
+
 			</div>
 		</main>
 	</body>
