--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import '../../base.css'
 ---
 
 <html lang="en">
@@ -17,50 +18,8 @@
 			
 		</header>
 
-		<main class="flex flex-col justify-center gap-5 items-center w-full min-h-[calc(100vh-50px)] px-[5%] md:flex-row md:justify-between 
-		">
-			<!-- <div class="titles">
-				<h1 class=" font-white text-[55px] text-white">Hi! I'm Carlos </h1>
-			</div> -->
-
-			<div class="cajita w-full h-screen flex justify-center items-start flex-col 
-		animate-fade-up animate-once animate-duration-[650ms] animate-ease-out animate-normal animate-fill-both">
-			<div class="editor w-[800px] [&>div]:w-full rounded-xl overflow-hidden shadow-xl">
-				<div class="h-8 bg-ds-gray flex justify-start items-center gap-2 px-5 [&>button]:aspect-square [&>button]:w-[20px] [&>button]:rounded-xl  ">
-					<button class=" bg-red-700"></button>
-					<button class=" bg-yellow-400"></button>
-					<button class=" bg-lime-600"></button>
-				</div>
-				<div class="h-[400px] p-5 pl-0 bg-ds-strgray flex">
-					<div class="lines px-2 mr-4 text-ds-lightgray h-full w-2 text-center">
-						<p>
-							1 </br>
-							2 </br>
-							3 </br>
-							4 </br>
-							5 </br>
-							6 </br>
-							7 </br>
-							8 </br>
-							9 </br>
-							10 </br>
-							11 </br>
-							12 </br>
-							13 </br>
-							14 </br>
-							15 </br>
-						</p>
-					</div>
-					<p class="text-white font-Nunito font-bold">
-					&lt;div&gt; 
-					</br>
-
-					&lt;/div&gt;
-					</p>
-				</div>
-			</div>
-			</div>
-
+		<main class="flex flex-col justify-center gap-5 items-center w-full min-h-[calc(100vh-50px)] lg:px-[5%] md:px-[60px] md:flex-row md:justify-between">
+			
 			<div class="card font-Nunito text-white rounded-lg bg-ds-strgray w-[80%] max-w-[360px] overflow-hidden shadow-2xl text-ds-lightgray
 			animate-fade-up animate-once animate-duration-[650ms] animate-ease-out animate-normal animate-fill-both ">
 				<div class="banner w-full min-h-[120px] bg-night-banner bg-cover bg-center bg-no-repeat"></div>
@@ -75,11 +34,12 @@
 							</div>
 						</div>
 						
-						<div class="flex gap-2 bg-ds-gray py-1 px-3 rounded-lg [&>img]:w-[30px]">
-							<img src="/images/Tech_Stack/atom.png" alt="React">
-							<img src="/images/Tech_Stack/java-script.png" alt="Javascript">
-							<img src="/images/Tech_Stack/magento.png" alt="Magento">
-							<img src="/images/Tech_Stack/mongo.png" alt="Magento">
+						<div class="flex gap-1 bg-ds-gray py-1 px-3 rounded-lg [&>img]:w-[25px] [&>img]:aspect-square [&>img]:object-cover">
+							<img src="/images/Tech_Stack/atom.png" alt="React" class=" relative after:content-['Hey'] after:absolute z-5">
+							<img src="/images/Tech_Stack/java-script.png" alt="Javascript" class=" relative after:content-['Hey'] after:absolute z-5">
+							<img src="/images/Tech_Stack/html.png" alt="Magento" class=" relative after:content-['Hey'] after:absolute z-5">
+							<img src="/images/Tech_Stack/magento.png" alt="Magento" class=" relative after:content-['Hey'] after:absolute z-5">
+							<img src="/images/Tech_Stack/mongo.png" alt="MongoDB" class=" relative after:content-['Hey'] after:absolute z-5">
 						</div>
 					</section>
 					<section class="mb-1">
@@ -88,12 +48,12 @@
 						<h4 class="font-light flex justify-start items-center"> <img src="/images/old-pc.png" alt="Old PC" 
 							class="w-[40px] aspect-square text-ds-lightgray font-light"> Playing <span class="font-bold text-white ml-1">Visual Studio Code</span></h4>
 					</section>
-					<section class="about font-bold text-sm text-lighttext">
+					<section class="about font-bold text-sm text-lighttext border-t-[1px] border-ds-lightgray pt-4">
 						<h4>ABOUT ME</h4>
-						<p class="text-sm mb-4 ">24 years old</p>
+						<p class="text-sm mb-4 text-white">24 years old</p>
 
 						<ul class="text-white">
-							<li class="flex">
+							<li class="flex gap-2">
 								<a href="https://github.com/roac3" target="_blank" class="text-blue-500 hover:text-blue-700">Github</a>
 								<svg class="-ml-1 mr-2 h-4 w-4" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="github" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512"><path fill="currentColor" d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3 .3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5 .3-6.2 2.3zm44.2-1.7c-2.9 .7-4.9 2.6-4.6 4.9 .3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3 .7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3 .3 2.9 2.3 3.9 1.6 1 3.6 .7 4.3-.7 .7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3 .7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3 .7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"></path></svg>
 							</li>
@@ -133,10 +93,55 @@
 					</section>
 
 				</div>
-			</div>			
+			</div>
+
+			<div class="w-full flex justify-center">
+
+
+
+				<div class="editor max-w-[800px] w-full [&>div]:w-full rounded-xl overflow-hidden shadow-xl ">
+					<div class="h-8 bg-ds-gray flex justify-start items-center gap-2 px-5 [&>button]:aspect-square [&>button]:w-[20px] [&>button]:rounded-xl  ">
+						<button class=" bg-red-700"></button>
+						<button class=" bg-yellow-400"></button>
+						<button class=" bg-lime-600"></button>
+					</div>
+					<div class="h-[400px] p-5 pl-0 bg-ds-strgray flex">
+						<div class="lines px-2 mr-4 text-ds-lightgray h-full w-2 text-center">
+							<p>
+								1 </br>
+								2 </br>
+								3 </br>
+								4 </br>
+								5 </br>
+								6 </br>
+								7 </br>
+								8 </br>
+								9 </br>
+								10 </br>
+								11 </br>
+								12 </br>
+								13 </br>
+								14 </br>
+								15 </br>
+							</p>
+						</div>
+<pre class="text-white font-Nunito font-bold text-md whitespace-pre-wrap text-justify [&>span]:whitespace-nowrap">
+&lt;<span class="text-red-500">div</span>&gt; 
+	&lt;<span class="text-red-500">h1 <span class=" text-orange-500">class=</span><span class=" text-lime-500">'main-title'</span></span>&gt;
+		Hi! 👋 I'm Carlos Roa.
+	&lt;/<span class="text-red-500">h1</span>&gt;
+	&lt;<span class="text-red-500">p <span class=" text-orange-500">class=</span><span class=" text-lime-500">'about-me'</span></span>&gt;
+		Frontend developer passionate about creating engaging and functional digital experiences. My goal is to build intuitive and appealing interfaces that provide an exceptional user experience. I'm excited to share my work with you.
+	&lt;/<span class="text-red-500">p</span>&gt;
+&lt;/<span class=" text-red-500">div</span>&gt;
+</pre>
+					</div>
+				</div>
+			</div>
+						
 		</main>
 
-		<div class="cajita w-full h-screen flex justify-center items-center flex-col 
+		<!-- <div class="cajita w-full h-screen flex justify-center items-center flex-col 
 		animate-fade-up animate-once animate-duration-[650ms] animate-ease-out animate-normal animate-fill-both">
 			<div class="editor w-[800px] [&>div]:w-full rounded-xl overflow-hidden shadow-xl">
 				<div class="h-8 bg-ds-gray flex justify-start items-center gap-2 px-5 [&>button]:aspect-square [&>button]:w-[20px] [&>button]:rounded-xl  ">
@@ -165,14 +170,14 @@
 						</p>
 					</div>
 					<p class="text-white font-Nunito font-bold">
-					&lt;div&gt; 
+					&lt;<span class="text-red-400">div</span>&gt; 
 					</br>
 
 					&lt;/div&gt;
 					</p>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 		<!-- <script src="../scripts/script.js"></script> -->
 	</body>
