--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -97,8 +97,6 @@ import '../../base.css'
 
 			<div class="w-full flex justify-center">
 
-
-
 				<div class="editor max-w-[800px] w-full [&>div]:w-full rounded-xl overflow-hidden shadow-xl ">
 					<div class="h-8 bg-ds-gray flex justify-start items-center gap-2 px-5 [&>button]:aspect-square [&>button]:w-[20px] [&>button]:rounded-xl  ">
 						<button class=" bg-red-700"></button>
@@ -108,7 +106,7 @@ import '../../base.css'
 					<div class="h-[400px] p-5 pl-0 bg-ds-strgray flex">
 						<div class="lines px-2 mr-4 text-ds-lightgray h-full w-2 text-center">
 							<p>
-								1 </br>
+								1 Test </br>
 								2 </br>
 								3 </br>
 								4 </br>
