--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import '../../base.css'
 		<meta name="viewport" content="width=device-width" />
 		<title>Carlos Roa | Portfolio</title>
 	</head>
-	<body class=" bg-blue-950">
+	<body class=" bg-blue-950 h-[2000px]">
 		<header class="w-full sticky top-0 z-10 bg-blue-900 h-[50px]">
 			
 		</header>
@@ -129,7 +129,7 @@ import '../../base.css'
 		Hi! 👋 I'm Carlos Roa.
 	&lt;/<span class="text-red-500">h1</span>&gt;
 	&lt;<span class="text-red-500">p <span class=" text-orange-500">class=</span><span class=" text-lime-500">'about-me'</span></span>&gt;
-		Frontend developer passionate about creating engaging and functional digital experiences. My goal is to build intuitive and appealing interfaces that provide an exceptional user experience. I'm excited to share my work with you.
+		Frontend developer passionate about creating engaging and functional digital experiences. My goal is to build intuitive and appealing interfaces that provide an exceptional user experience. I'm excited to share my work with you!
 	&lt;/<span class="text-red-500">p</span>&gt;
 &lt;/<span class=" text-red-500">div</span>&gt;
 </pre>
@@ -139,8 +139,8 @@ import '../../base.css'
 						
 		</main>
 
-		<!-- <div class="cajita w-full h-screen flex justify-center items-center flex-col 
-		animate-fade-up animate-once animate-duration-[650ms] animate-ease-out animate-normal animate-fill-both">
+		<div class="cajita w-full h-screen flex justify-center items-center flex-col opacity-0
+		 animate-once animate-duration-[650ms] animate-ease-out animate-normal animate-fill-both">
 			<div class="editor w-[800px] [&>div]:w-full rounded-xl overflow-hidden shadow-xl">
 				<div class="h-8 bg-ds-gray flex justify-start items-center gap-2 px-5 [&>button]:aspect-square [&>button]:w-[20px] [&>button]:rounded-xl  ">
 					<button class=" bg-red-700"></button>
@@ -175,8 +175,8 @@ import '../../base.css'
 					</p>
 				</div>
 			</div>
-		</div> -->
+		</div> 
 
-		<!-- <script src="../scripts/script.js"></script> -->
+		<script src="../scripts/script.js"></script>
 	</body>
 </html>
