--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import '../../base.css'
 
 		<main class="flex flex-col justify-center gap-5 items-center w-full min-h-[calc(100vh-50px)] lg:px-[5%] md:px-[60px] md:flex-row md:justify-between">
 			
-			<div class="card font-Nunito text-white rounded-lg bg-ds-strgray w-[80%] max-w-[360px] overflow-hidden shadow-2xl text-ds-lightgray
+			<div class="card font-Nunito rounded-lg bg-ds-strgray w-[80%] max-w-[360px] overflow-hidden shadow-2xl text-ds-lightgray
 			animate-fade-up animate-once animate-duration-[650ms] animate-ease-out animate-normal animate-fill-both ">
 				<div class="banner w-full min-h-[120px] bg-night-banner bg-cover bg-center bg-no-repeat"></div>
 				<div class="p-4 w-full ">
@@ -97,7 +97,8 @@ import '../../base.css'
 
 			<div class="w-full flex justify-center">
 
-				<div class="editor max-w-[800px] w-full [&>div]:w-full rounded-xl overflow-hidden shadow-xl ">
+				<div class="editor max-w-[800px] w-full [&>div]:w-full rounded-xl overflow-hidden shadow-xl 
+					animate-fade-up animate-once animate-duration-[650ms] animate-ease-out animate-normal animate-fill-both">
 					<div class="h-8 bg-ds-gray flex justify-start items-center gap-2 px-5 [&>button]:aspect-square [&>button]:w-[20px] [&>button]:rounded-xl  ">
 						<button class=" bg-red-700"></button>
 						<button class=" bg-yellow-400"></button>
