--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,8 +20,8 @@ import '../../base.css'
 
 		<main class="flex flex-col justify-center gap-5 items-center w-full min-h-[calc(100vh-50px)] lg:px-[5%] md:px-[60px] md:flex-row md:justify-between">
 			
-			<div class="card font-Nunito rounded-lg bg-ds-strgray w-[80%] max-w-[360px] overflow-hidden shadow-2xl text-ds-lightgray
-			animate-fade-up animate-once animate-duration-[650ms] animate-ease-out animate-normal animate-fill-both ">
+			<div class="card font-Nunito rounded-lg bg-ds-strgray w-[80%] max-w-[360px] overflow-hidden shadow-2xl text-ds-lightgray 
+			animate-fade-up animate-once animate-duration-[650ms] animate-ease-out animate-normal animate-fill-both">
 				<div class="banner w-full min-h-[120px] bg-night-banner bg-cover bg-center bg-no-repeat"></div>
 				<div class="p-4 w-full ">
 					<section class="w-full flex items-start justify-between relative mb-8">
@@ -124,15 +124,15 @@ import '../../base.css'
 								15 </br>
 							</p>
 						</div>
-<pre class="text-white font-Nunito font-bold text-md whitespace-pre-wrap text-justify [&>span]:whitespace-nowrap">
-&lt;<span class="text-red-500">div</span>&gt; 
-	&lt;<span class="text-red-500">h1 <span class=" text-orange-500">class=</span><span class=" text-lime-500">'main-title'</span></span>&gt;
-		Hi! 👋 I'm Carlos Roa.
-	&lt;/<span class="text-red-500">h1</span>&gt;
-	&lt;<span class="text-red-500">p <span class=" text-orange-500">class=</span><span class=" text-lime-500">'about-me'</span></span>&gt;
-		Frontend developer passionate about creating engaging and functional digital experiences. My goal is to build intuitive and appealing interfaces that provide an exceptional user experience. I'm excited to share my work with you!
-	&lt;/<span class="text-red-500">p</span>&gt;
-&lt;/<span class=" text-red-500">div</span>&gt;
+<pre class="text-white font-Nunito font-bold text-md whitespace-pre-wrap text-justify  ">
+&lt;<span class="html">div</span>&gt; 
+&lt;<span class="html">h1 <span class="class type">class</span>=<span class="text-class">'main-title'</span></span>&gt;
+Hi! 👋 I'm Carlos Roa.
+	&lt;/<span class="html">h1</span>&gt;
+	&lt;<span class="html">p <span class="class type" style="--n:5">class</span>=<span class="text-class">'about-me'</span></span>&gt;
+	<span class="type" style="--n:228">Frontend developer passionate about creating engaging and functional digital experiences. My goal is to build intuitive and appealing interfaces that provide an exceptional user experience. I'm excited to share my work with you!</span>
+	&lt;/<span class="html">p</span>&gt;
+&lt;/<span class=" html">div</span>&gt;
 </pre>
 					</div>
 				</div>
